[project]
name = "backend"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "tinydb>=4.8.2",
    "uvicorn>=0.34.2",
]

[tool.uv]
dev-dependencies = [
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.1.0",
    "mkdocs-material>=9.5.50",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
